# cmtools

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
doc/: xscore_gen.md
src/cmtools/: audiodev.c  cmtools.c  mas.c
